2007-11-29 yusei
* Fixed Predicate_edit to use ignore_layout and editable_mode parameters in redirect url.

2007-11-19 yusei
* Switch off acquire_local_roles on Simulation Movement.

2007-11-14 kazuhiko
* check if simulation state is draft or not before calling 'calculate' workflow method otherwise causality state can remain calculating.

2007-11-05 alex
* add rule_validation_workflow

2007-10-30 yo
* Add pricing_interaction_workflow.

2007-10-29 jerome
* Add field libraries for report and dialogs. Increase version to 1.0rc13

2007-10-25 romain
* Move Archive Tool to erp5_archive.

2007-10-10 yo
* Support tools in Business Templates.

2007-09-08 yusei
* Add Module Property action as global action.

2007-09-06 alex
* rename simulation_movement_interaction_workflow to simulation_movement_causality_interaction_workflow
* follow style used in delivery_causality_interaction_workflow

2007-09-06 aurel
* add archive tool

2007-09-04 yo
* Fix the way of calling reindexObject in InventoryModule_reindexMovementList

2007-09-04
*Add style in get_ODSStyleSheet

2007-08-29 yusei
* Add Folder_viewModule.

2007-08-29 jerome
* New version with field libraries

2007-08-13 jerome
* Add some global actions for history, metadata, search, sort_on and list_ui

2007-07-30 yo
* Add Movement_getPriceCalculationOperandDict.

2007-02-28 Aurel
* define most cache

2006-01-09 Vincent
* Remove catalog
* Add a dependency on erp5_catalog

2006-11-24 Aurel
* add reset parameter when calling Base_viewWorklist

2006-10-31 Seb
* Added everything necessary to use portal_caches

2006-10-30 Kevin
* Fix ID handling in category importing tool. Now the 4 category tree representation (described in the openoffice example file) can be imported.

2006-10-04 Kevin
* Add Tips on category import fast input screen to help user.

2006-10-03 Kevin
* Mass category import from an OpenOffice document is now much more flexible.

2006-09-15 Aurel