@@ -109,7 +109,6 @@
                         <string>my_string_index</string>
                         <string>my_int_index</string>
                         <string>my_test_method_id</string>
-                        <string>my_membership_criterion_category_list2</string>
                       </list>
                     </value>
                 </item>
